[package]
name = "cros-libva"
version = "0.0.2"
license-file = "LICENSE"
description = "Safe bindings over libva"
repository = "https://github.com/chromeos/cros-libva"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
anyhow = "1"
bitflags = "1.3"
log = { version = "0", features = ["release_max_level_debug"] }

[build-dependencies]
pkg-config = "0.3.26"

[dev-dependencies]
crc32fast = "1.2.1"
